--- a/dev-python/python-dateutil/ChangeLog
+++ b/dev-python/python-dateutil/ChangeLog
@@ -1,214 +1,92 @@
 # ChangeLog for dev-python/python-dateutil
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-dateutil/ChangeLog,v 1.53 2013/07/14 10:23:50 ago Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  14 Jul 2013; Agostino Sarubbo <ago@gentoo.org> python-dateutil-2.1-r1.ebuild:
-  Stable for alpha, wrt bug #469994
+*python-dateutil-2.4.2-r1 (09 Aug 2015)
+*python-dateutil-2.4.2 (09 Aug 2015)
+*python-dateutil-2.4.1-r1 (09 Aug 2015)
+*python-dateutil-2.4.0 (09 Aug 2015)
+*python-dateutil-2.2 (09 Aug 2015)
+*python-dateutil-2.1-r1 (09 Aug 2015)
 
-  24 May 2013; Agostino Sarubbo <ago@gentoo.org> python-dateutil-2.1-r1.ebuild:
-  Stable for ppc64, wrt bug #469994
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
+  +files/python-dateutil-1.4.1-locale.patch,
+  +files/python-dateutil-2.1-open-utf-8.patch,
+  +files/python-dateutil-2.4.2-timelex.patch, +metadata.xml,
+  +python-dateutil-2.1-r1.ebuild, +python-dateutil-2.2.ebuild,
+  +python-dateutil-2.4.0.ebuild, +python-dateutil-2.4.1-r1.ebuild,
+  +python-dateutil-2.4.2.ebuild, +python-dateutil-2.4.2-r1.ebuild:
+  proj/gentoo: Initial commit
 
-  22 May 2013; Agostino Sarubbo <ago@gentoo.org> python-dateutil-2.1-r1.ebuild:
-  Stable for ia64, wrt bug #469994
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  20 May 2013; Agostino Sarubbo <ago@gentoo.org> python-dateutil-2.1-r1.ebuild:
-  Stable for arm, wrt bug #469994
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  20 May 2013; Agostino Sarubbo <ago@gentoo.org> python-dateutil-2.1-r1.ebuild:
-  Stable for ppc, wrt bug #469994
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  20 May 2013; Agostino Sarubbo <ago@gentoo.org> python-dateutil-2.1-r1.ebuild:
-  Stable for x86, wrt bug #469994
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  19 May 2013; Agostino Sarubbo <ago@gentoo.org> python-dateutil-2.1-r1.ebuild:
-  Stable for amd64, wrt bug #469994
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> python-dateutil-2.1-r1.ebuild:
+  Use https by default
 
-  17 May 2013; Jeroen Roovers <jer@gentoo.org> python-dateutil-2.1-r1.ebuild:
-  Stable for HPPA (bug #469994).
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  07 Mar 2013; Ian Delaney <idella4@gentoo.org> python-dateutil-2.1-r1.ebuild:
-  pypy support tested and added
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  05 Feb 2013; Benda Xu <heroxbd@gentoo.org> python-dateutil-2.1-r1.ebuild:
-  keyword ~arm
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-*python-dateutil-2.1-r1 (01 Jan 2013)
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  01 Jan 2013; Michał Górny <mgorny@gentoo.org> +python-dateutil-2.1-r1.ebuild:
-  Migrate to distutils-r1.
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> python-dateutil-2.1.ebuild:
-  Stable for ia64, wrt bug #426466
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  07 Oct 2012; nixnut <nixnut@gentoo.org> python-dateutil-2.1.ebuild:
-  ppc stable #426466
+  Bug: https://bugs.gentoo.org/552720
 
-  14 Jul 2012; Johannes Huber <johu@gentoo.org> python-dateutil-2.1.ebuild:
-  Stable for x86, wrt bug #426466
+  01 Oct 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add missing remote-id type=launchpad
 
-  14 Jul 2012; Agostino Sarubbo <ago@gentoo.org> python-dateutil-2.1.ebuild:
-  Stable for amd64, wrt bug #426466
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  04 Apr 2012; Mike Gilbert <floppym@gentoo.org>
-  +files/python-dateutil-2.1-open-utf-8.patch, python-dateutil-2.1.ebuild:
-  Fix UnicodeDecodeError in setup.py. Bug 410725.
+  19 Oct 2015; Justin Lecher <jlec@gentoo.org> metadata.xml,
+  python-dateutil-2.4.2-r1.ebuild:
+  Add python3.5 support
 
-  01 Apr 2012; Mike Gilbert <floppym@gentoo.org> python-dateutil-2.1.ebuild:
-  Update HOMEPAGE.
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  01 Apr 2012; Mike Gilbert <floppym@gentoo.org> -python-dateutil-2.0.ebuild:
-  Remove.
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
 
-*python-dateutil-2.1 (01 Apr 2012)
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
 
-  01 Apr 2012; Mike Gilbert <floppym@gentoo.org> +python-dateutil-2.1.ebuild:
-  Version bump. This version supports both python 2 and 3.
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-  19 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org>
-  python-dateutil-2.0.ebuild:
-  Fixed PYTHON_DEPEND
-
-*python-dateutil-2.0 (19 Jan 2012)
-
-  19 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org>
-  +python-dateutil-2.0.ebuild:
-  Version bump (python3 only)
-
-  26 Nov 2011; Markos Chandras <hwoarang@gentoo.org> python-dateutil-1.5.ebuild:
-  Ignore failures of tests with Jython. Update DESCRIPTION and LICENSE. Use
-  SLOT="python-2". Add "examples" USE flag. Use sed instead of a patch. Patch by
-  Arfrever.
-
-  07 Jun 2011; Naohiro Aota <naota@gentoo.org> python-dateutil-1.5.ebuild:
-  Add ~x86-fbsd keyword
-
-  23 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
-  python-dateutil-1.5.ebuild:
-  Keyword ~ppc64 wrt #341699
-
-  30 May 2010; Raúl Porcel <armin76@gentoo.org> python-dateutil-1.5.ebuild:
-  ia64/x86 stable wrt #318195
-
-  17 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  python-dateutil-1.5.ebuild:
-  amd64 stable (tested by rullzer) (bug #318195).
-
-  10 May 2010; nixnut <nixnut@gentoo.org> python-dateutil-1.5.ebuild:
-  ppc stable #318195
-
-*python-dateutil-1.5 (02 Apr 2010)
-
-  02 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +python-dateutil-1.5.ebuild:
-  Version bump.
-
-  08 Feb 2010; Peter Volkov <pva@gentoo.org>
-  python-dateutil-1.4.1-r1.ebuild:
-  Add inherit eutils for epatch.
-
-  17 Jan 2010; Raúl Porcel <armin76@gentoo.org>
-  python-dateutil-1.4.1-r1.ebuild:
-  ia64 stable wrt #297713
-
-  07 Jan 2010; Joseph Jezak <josejx@gentoo.org>
-  python-dateutil-1.4.1-r1.ebuild:
-  Marked ppc stable for bug #297713.
-
-  03 Jan 2010; Markus Meier <maekke@gentoo.org>
-  python-dateutil-1.4.1-r1.ebuild:
-  x86 stable, bug #297713
-
-  24 Dec 2009; Pacho Ramos <pacho@gentoo.org>
-  python-dateutil-1.4.1-r1.ebuild:
-  amd64 stable, bug 297713
-
-  20 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  python-dateutil-1.4.1-r1.ebuild:
-  Set SUPPORT_PYTHON_ABIS.
-
-  11 Oct 2009; Fabian Groffen <grobian@gentoo.org>
-  python-dateutil-1.4.1-r1.ebuild:
-  Merge from Prefix
-
-  04 Sep 2009; Patrick Lauer <patrick@gentoo.org>
-  -python-dateutil-1.3.ebuild:
-  Remove old
-
-*python-dateutil-1.4.1-r1 (20 Jan 2009)
-
-  20 Jan 2009; Jesus Rivero <neurogeek@gentoo.org>
-  -python-dateutil-1.4.1.ebuild, +python-dateutil-1.4.1-r1.ebuild:
-  Fixed DEPEND typo, Added setuptools to DEPEND. Removed old version
-
-*python-dateutil-1.4.1 (14 Jan 2009)
-
-  14 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org>
-  +files/python-dateutil-1.4.1-locale.patch, +python-dateutil-1.4.1.ebuild:
-  Version bump. Use timezone from sys-libs/timezone-data now
-
-  18 Jun 2008; Santiago M. Mola <coldwind@gentoo.org>
-  python-dateutil-1.1.ebuild, python-dateutil-1.2.ebuild,
-  python-dateutil-1.3.ebuild:
-  Set up PYTHON_MODNAME, fixes bug #227267.
-
-  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
-  Removing Marien Zwart (marienz, #107204) from metadata.xml.
-
-  14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
-  python-dateutil-1.2.ebuild:
-  ppc. stable
-
-*python-dateutil-1.3 (31 Dec 2007)
-
-  31 Dec 2007; Tiziano Müller <dev-zero@gentoo.org>
-  python-dateutil-1.2.ebuild, +python-dateutil-1.3.ebuild:
-  Version bump (bug #203827). Fixed tests.
-
-  16 Dec 2007; Samuli Suominen <drac@gentoo.org> python-dateutil-1.2.ebuild:
-  amd64 stable
-
-*python-dateutil-1.2 (27 Jun 2007)
-
-  27 Jun 2007; Lukasz Strzygowski <lucass@gentoo.org>
-  +python-dateutil-1.2.ebuild:
-  Version bump.
-
-  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
-  Transition to Manifest2.
-
-  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
-  python-dateutil-1.1.ebuild:
-  Stable on ia64.
-
-  19 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org>
-  python-dateutil-1.1.ebuild:
-  ppc stable
-
-  27 Jul 2006; Alastair Tse <liquidx@gentoo.org>
-  -python-dateutil-1.0.ebuild, python-dateutil-1.1.ebuild:
-  stable bump for x86
-
-  01 Apr 2006; Aron Griffis <agriffis@gentoo.org>
-  python-dateutil-1.1.ebuild:
-  Mark 1.1 ~ia64
-
-  24 Dec 2005; Tobias Scherbaum <dertobi123@gentoo.org>
-  python-dateutil-1.1.ebuild:
-  Added to ~ppc, #114776
-
-*python-dateutil-1.1 (22 Dec 2005)
-
-  22 Dec 2005; Marien Zwart <marienz@gentoo.org>
-  +python-dateutil-1.1.ebuild:
-  Version bump (bug #116410).
-
-  10 Dec 2005; Luis Medinas <metalgod@gentoo.org>
-  python-dateutil-1.0.ebuild:
-  Added ~amd64 keyword. Bug #114776.
-
-*python-dateutil-1.0 (24 Nov 2005)
-
-  24 Nov 2005; Marien Zwart <marienz@gentoo.org> +metadata.xml,
-  +python-dateutil-1.0.ebuild:
-  new ebuild, based on the ebuild from Jeff Kowalczyk <jtk@yahoo.com> (bug
-  #64398)
