--- a/dev-python/setproctitle/ChangeLog
+++ b/dev-python/setproctitle/ChangeLog
@@ -1,116 +1,98 @@
 # ChangeLog for dev-python/setproctitle
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/setproctitle/ChangeLog,v 1.28 2013/05/20 08:42:37 ago Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  20 May 2013; Agostino Sarubbo <ago@gentoo.org> setproctitle-1.1.7.ebuild:
-  Stable for x86, wrt bug #470460
+*setproctitle-1.1.8 (09 Aug 2015)
 
-  19 May 2013; Agostino Sarubbo <ago@gentoo.org> setproctitle-1.1.7.ebuild:
-  Stable for amd64, wrt bug #470460
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
+  +setproctitle-1.1.8.ebuild:
+  proj/gentoo: Initial commit
 
-*setproctitle-1.1.7 (10 Mar 2013)
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  10 Mar 2013; Ian Delaney <idella4@gentoo.org> +setproctitle-1.1.7.ebuild:
-  bump
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  01 Mar 2013; Sven Wegener <swegener@gentoo.org> setproctitle-1.1.6.ebuild:
-  Don't build for python 2.4.
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-*setproctitle-1.1.6-r1 (15 Feb 2013)
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  15 Feb 2013; Michał Górny <mgorny@gentoo.org> +setproctitle-1.1.6-r1.ebuild:
-  Migrate to distutils-r1.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> setproctitle-1.1.8.ebuild:
+  Use https by default
 
-  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> setproctitle-1.1.6.ebuild:
-  Add ~alpha, wrt bug #449220
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> setproctitle-1.1.6.ebuild:
-  Add ~ia64, wrt bug #449220
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> setproctitle-1.1.6.ebuild:
-  Stable for x86, wrt bug #449430
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> setproctitle-1.1.6.ebuild:
-  Stable for amd64, wrt bug #449430
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> setproctitle-1.1.6.ebuild:
-  Add ~ppc64, wrt bug #449220
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> setproctitle-1.1.8.ebuild:
+  Enable https for all google URIs
 
-  31 Dec 2012; Dirkjan Ochtman <djc@gentoo.org> -setproctitle-1.1.2.ebuild:
-  Remove old version.
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  12 Dec 2012; Agostino Sarubbo <ago@gentoo.org> setproctitle-1.1.6.ebuild:
-  Add ~ppc, wrt bug #413125
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-  09 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> setproctitle-1.1.6.ebuild:
-  keyword amd64-linux and x86-linux
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  18 May 2012; Jeff Horelick <jdhore@gentoo.org> setproctitle-1.1.3.ebuild:
-  marked x86 per bug 415879
+  Bug: https://bugs.gentoo.org/552720
 
-  14 May 2012; Agostino Sarubbo <ago@gentoo.org> setproctitle-1.1.3.ebuild:
-  Stable for amd64, wrt bug #415879
+*setproctitle-1.1.9 (31 Aug 2015)
 
-*setproctitle-1.1.6 (08 May 2012)
+  31 Aug 2015; Ian Delaney <idella4@gentoo.org> +setproctitle-1.1.9.ebuild:
+  bump; virtual rewrite
 
-  08 May 2012; Dirkjan Ochtman <djc@gentoo.org> +setproctitle-1.1.6.ebuild:
-  Version bump to 1.1.6 (thanks jbergstroem for test fixes).
+  repalce test phase to exclude pypy which the tests are not written
+  to cater to, make a html file of the README for DOCS at install
 
-  22 Apr 2012; Raúl Porcel <armin76@gentoo.org> setproctitle-1.1.2.ebuild,
-  setproctitle-1.1.3.ebuild:
-  Add ~arm/~sparc
+  Package-Manager: portage-2.2.20
 
-*setproctitle-1.1.3 (24 Dec 2011)
+  09 Nov 2015; Pacho Ramos <pacho@gentoo.org> setproctitle-1.1.8.ebuild,
+  setproctitle-1.1.9.ebuild:
+  Support python3_5
 
-  24 Dec 2011; Patrick Lauer <patrick@gentoo.org> +setproctitle-1.1.3.ebuild:
-  Bump #393103
+  Package-Manager: portage-2.2.24
 
-  10 Apr 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
-  setproctitle-1.1.2.ebuild:
-  x86 stable wrt bug #360259
+  12 Nov 2015; Justin Lecher <jlec@gentoo.org> setproctitle-1.1.8.ebuild,
+  setproctitle-1.1.9.ebuild:
+  Use eclass functions to obtain build variables
 
-  26 Mar 2011; Christoph Mende <angelos@gentoo.org> setproctitle-1.1.2.ebuild:
-  Stable on amd64 wrt bug #360259
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-*setproctitle-1.1.2 (26 Mar 2011)
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
 
-  26 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +setproctitle-1.1.2.ebuild:
-  Version bump.
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
 
-  24 Mar 2011; Markos Chandras <hwoarang@gentoo.org> setproctitle-1.1.1.ebuild:
-  Stable on amd64 wrt bug #360203
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-*setproctitle-1.1.1 (03 Feb 2011)
-
-  03 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -setproctitle-1.1.ebuild, +setproctitle-1.1.1.ebuild:
-  Version bump.
-
-  18 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  setproctitle-1.1.ebuild:
-  Restrict Jython ABIs.
-
-*setproctitle-1.1 (19 Jul 2010)
-
-  19 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -setproctitle-1.0.1.ebuild, +setproctitle-1.1.ebuild:
-  Version bump (bug #327919).
-
-*setproctitle-1.0.1 (05 Jun 2010)
-
-  05 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -setproctitle-1.0.ebuild, +setproctitle-1.0.1.ebuild:
-  Version bump.
-
-*setproctitle-1.0 (21 Feb 2010)
-
-  21 Feb 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +setproctitle-1.0.ebuild:
-  Version bump.
-
-*setproctitle-0.4 (20 Dec 2009)
-
-  20 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +setproctitle-0.4.ebuild, +metadata.xml:
-  Initial addition (bug #297288).
